# FreeBrewie-SOM

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  lv_conf_target.h
Apps/BrewieApp/: CMakeLists.txt
Apps/BrewieApp/src/: main.c  main_sim.c
Apps/BrewieApp/src/App/: App.c  App.h
Apps/BrewieApp/src/Platform/: Platform.c  Platform.h
Apps/BrewieApp/src/Protocol/: Protocol.c  Protocol.h
Apps/BrewieApp/src/UI/: UI.c  UI.h
Apps/CalibrationApp/: CMakeLists.txt
Apps/CalibrationApp/src/: main.c
Apps/Launcher/: CMakeLists.txt
Apps/Launcher/src/: main.c
Docs/: Brewie_SOM_MCU_Integration_Notes_2026-04-12.md  Brewie_SOM_Platform_Notes.md  FreeBrewie_SOM_Architecture_Notes_2026-04-15.md  FreeBrewie_SOM_Development_Environment_Consolidated_2026-04-06.md  FreeBrewie_UI_Current_Status_2026-04-15.md  FreeBrewie_UI_Current_status_2026_04_12.md  README.md  README_2026-04-12.md  SOM_Architecture.md  SOM_Bringup_Status.md
Shared/Platform/include/: PlatformShared.h  Serial.h  Time.h
Shared/Platform/src/: PlatformShared.c  Serial.c  Time.c
Shared/Protocol/include/: Protocol.h  ProtocolShared.h
Shared/Protocol/src/: Protocol.c  ProtocolShared.c
Tools/McuProbe/: CMakeLists.txt  McuProbe.c
build-target/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
build-target/.cmake/api/v1/reply/: cache-v2-826eb375ed6937a68d9e.json  cmakeFiles-v1-6dcd295e98f49847ff33.json  codemodel-v2-82b2a1877837b7aab626.json  index-2026-04-08T16-45-32-0922.json  target-brewie_app-Debug-1db078bbfd85f48d4a37.json  target-brewie_launcher-Debug-45134696df0c61720a2c.json  target-calibration_app-Debug-bbc8b0f594085850ce6a.json  target-mcu_probe-Debug-b81e21864e1917d93384.json
build-target/Apps/BrewieApp/: Makefile  cmake_install.cmake
build-target/Apps/CalibrationApp/: Makefile  cmake_install.cmake
build-target/Apps/Launcher/: Makefile  cmake_install.cmake
build-target/Tools/McuProbe/: Makefile  cmake_install.cmake
cmake/: toolchain-armhf-bullseye.cmake
